--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -30,12 +30,24 @@ services:
         - "traefik.http.services.lastfm-now-playing-https.loadbalancer.server.port=3000"
 
       update_config:
+        parallelism: 1
         order: start-first
+        failure_action: rollback
+        monitor: 10s
+        delay: 10s
       restart_policy:
         condition: on-failure
         delay: 5s
         max_attempts: 3
         window: 120s
+      replicas: 2
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 256M
+        reservations:
+          cpus: '0.1'
+          memory: 128M
 
 networks:
   traefik-public:
