--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         name: lastfm-now-playing
         file: docker-stack.yml
-        host: tank.alexraskin.com
-        user: deploy
+        host: ${{ secrets.DOCKER_HOST }}
+        user: ${{ secrets.DOCKER_USER }}
         ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
         env_file: ./envfile
